wordpress-golf/wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-golf
  namespace: default
  labels:
    app: wordpress-golf
spec:
  ports:
    - port: 80
  selector:
    app: wordpress-golf
    tier: frontend
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress-golf
  labels:
    app: wordpress-golf
spec:
  selector:
    matchLabels:
      app: wordpress-golf
      tier: frontend
  replicas: 3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-golf
        tier: frontend
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wordpress-golf
        ports:
        - containerPort: 80
          name: wordpress-golf
        volumeMounts:
        - name: wordpress-golf-pv
          mountPath: /var/www/html
      volumes:
      - name: wordpress-golf-pv
        persistentVolumeClaim:
          claimName: wp-golf-pv-claim
      nodeSelector:
        beta.kubernetes.io/arch: amd64
