wordpress-golf/external-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-golf-external
  namespace: default
  labels:
    traffic-type: external
  annotations:
    traefik.frontend.rule.type: PathPrefix
    #traefik.frontend.redirect.entryPoint: https
    #traefik.frontend.redirect.regex: ^http://(.*)
    #traefik.frontend.redirect.replacement: https://$1
    #ingress.kubernetes.io/auth-type: basic
    #ingress.kubernetes.io/auth-secret: ingress-auth
spec:
  rules:
  - host: league.golffan.us
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-golf
          servicePort: 80
